fix(tagpicker): fix close button alignment in xs size

--- a/src/CloseButton/styles/index.less
+++ b/src/CloseButton/styles/index.less
@@ -12,4 +12,8 @@
   border: none;
   outline: none !important;
   cursor: pointer;
+
+  .rs-icon {
+    vertical-align: bottom;
+  }
 }
