--- a/src/InputPicker/styles/index.less
+++ b/src/InputPicker/styles/index.less
@@ -35,6 +35,10 @@
   .rs-picker-toggle.rs-btn-xs ~ .rs-picker-tag-wrapper .rs-tag {
     padding-top: 0;
     padding-bottom: 0;
+
+    .rs-btn-close {
+      padding: 4px 5px;
+    }
   }
 }
 
